--- a/src/assets/SCSS/main.scss
+++ b/src/assets/SCSS/main.scss
@@ -597,6 +597,7 @@ footer.footerMain {
                 }
                 & .dark-logo{
                     display: initial;
+                    filter: brightness(0) invert(1);
                 }
             }
             & .headerRight {
